tests/ui/suggestions/issue-85347.stderr
error[E0107]: associated type takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/issue-85347.rs:3:42
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |                                          ^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/issue-85347.rs:3:10
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |          ^^^ --
help: add missing lifetime argument
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<'a, Target = Self>>;
   |                                              +++

error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-85347.rs:3:46
   |
LL |     type Bar<'a>: Deref<Target = <Self>::Bar<Target = Self>>;
   |                                              ^^^^^^^^^^^^^ associated type not allowed here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0229.
For more information about an error, try `rustc --explain E0107`.
